--- a/app/src/main/res/layout/main_recyclerview_row.xml
+++ b/app/src/main/res/layout/main_recyclerview_row.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="48dp">
 
     <ImageView
-        android:id="@+id/image_star"
+        android:id="@+id/image_checkBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -24,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:layout_weight="1"
             android:text="TextView"
             app:fontFamily="sans-serif" />
@@ -33,6 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:layout_weight="1"
             android:text="TextView"
             android:textSize="12sp"
@@ -44,10 +48,13 @@
         android:id="@+id/text_percent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="8dp"
-        android:paddingBottom="2dp"
         android:layout_weight="3"
-        android:text="TextView" />
+        android:paddingBottom="2dp"
+        android:paddingTop="8dp"
+        android:text="TextView"
+        android:textSize="14sp"
+        android:typeface="sans"
+        app:fontFamily="sans-serif-condensed" />
 
     <ImageView
         android:id="@+id/image_handle"
