--- a/app/src/main/res/layout/main_recyclerview_row.xml
+++ b/app/src/main/res/layout/main_recyclerview_row.xml
@@ -5,6 +5,14 @@
     android:layout_height="48dp">
 
     <ImageView
+        android:id="@+id/image_handle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:scaleType="center"
+        app:srcCompat="@drawable/button_drag" />
+
+    <ImageView
         android:id="@+id/image_checkBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,13 +63,5 @@
         android:textSize="14sp"
         android:typeface="sans"
         app:fontFamily="sans-serif-condensed" />
-
-    <ImageView
-        android:id="@+id/image_handle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:scaleType="center"
-        app:srcCompat="@drawable/drag" />
 
 </LinearLayout>
