--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,15 @@
         android:layout_marginTop="8dp"
         android:text="@string/main_ScriptureDefaultText"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:fontFamily="sans-serif"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Title" />
 
-    <TextView
-        android:id="@+id/text_ScriptureText"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
@@ -34,13 +34,34 @@
         android:layout_marginRight="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textColor="@android:color/black"
-        android:textSize="14sp"
-        app:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/image_Memorized"
-        app:layout_constraintTop_toBottomOf="@+id/text_scriptureName" />
+        app:layout_constraintTop_toBottomOf="@+id/text_scriptureName">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_ScriptureText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:text="TextView"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                app:fontFamily="sans-serif-condensed"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/image_Memorized"
+                app:layout_constraintTop_toBottomOf="@+id/text_scriptureName" />
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/text_lastReviewed"
@@ -48,12 +69,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="2dp"
         android:text="TextView"
         android:textSize="12sp"
         app:fontFamily="sans-serif-condensed"
         app:layout_constraintStart_toEndOf="@+id/image_Memorized"
-        app:layout_constraintTop_toBottomOf="@+id/text_ScriptureText" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
     <TextView
         android:id="@+id/text_memorized"
@@ -77,7 +97,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/text_ScriptureText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_scriptureName"
         app:srcCompat="@drawable/check" />
