Add 'get a random scripture' option to menu  --Added the ability to get a scripture from the database by id to main.  --updated scripture non-default constructor to take verseID as parameter  --Updated getVerse to add verseID to scripture as parameter see ^

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,6 +7,9 @@
         android:id="@+id/i0"
         android:title= "@string/main_menu_add" />
     <item
+        android:id ="@+id/i6"
+        android:title="@string/main_menu_random" />
+    <item
         android:id="@+id/i1"
         android:title="@string/main_menu_remove" />
     <item
